// $Id$
// $Name$

Image Picker  for D6 in DRUPAL-6--2, 2009-12-11
------------------------------------
by hutch, added more user configuration, numerous bugfixes

Image Picker  for D6 in DRUPAL-6--2, 2009-11-29
------------------------------------
by hutch, fixed error in admin/settings/general path

Image Picker  for D6 in DRUPAL-6--2, 2009-11-26
------------------------------------
by hutch, improved js and theming, removed inline js, fixed opera bug

Image Picker  for D6 in DRUPAL-6--2, 2009-11-13
------------------------------------
by hutch, fixed bug in paging

Image Picker  for D6 in DRUPAL-6--2, 2009-11-06
------------------------------------
by hutch, added imagepicker_postlet module

Image Picker  for D6 in DRUPAL-6--2, 2009-10-11
------------------------------------
by hutch, added quota by role

Image Picker  for D6 in DRUPAL-6--2, 2009-10-02
------------------------------------
by hutch, fixed bug in reporting in imagepicker_image_check_functions()

Image Picker  for D6 in DRUPAL-6--2, 2009-09-29
------------------------------------
by hutch, prevent exifinfo on gifs

Image Picker  for D6 in DRUPAL-6--2, 2009-09-27
------------------------------------
by hutch, added exif info, fixed noisy no-exif message

Image Picker  for D6 in DRUPAL-6--2, 2009-09-23
------------------------------------
by hutch, added batch import, copy

Image Picker  for D6 in DRUPAL-6--2, 2009-09-14
------------------------------------
by hutch, #571198 fixed

Image Picker  for D6 in DRUPAL-6--2, 2009-09-09
------------------------------------
by hutch, added group enable/disable, added to contrib

Image Picker  for D6 in DRUPAL-6--2, 2009-08-29
------------------------------------
by hutch, added indexes to imagepicker_group_images
added field descriptions to install schema
fixed bug in user config tab

Image Picker  for D6 in DRUPAL-6--2, 2009-08-05
------------------------------------
by hutch, added watermarks, save original
and user config page
