@@ -1,6 +1,10 @@
 // $Id$
 // $Name$
 
+Image Picker  for D6 in DRUPAL-6--2, 20010-01-04
+------------------------------------
+by hutch, improved insert code, added Used column to admin page
+
 Image Picker  for D6 in DRUPAL-6--2, 2009-12-11
 ------------------------------------
 by hutch, added more user configuration, numerous bugfixes
